force-app/main/default/objects/Lead/fields/Accreditation_Been_Withdrawn__c.field-meta.xml
<CustomField>
    <fullName>Accreditation_Been_Withdrawn__c</fullName>
    <inlineHelpText>Have you ever had a lender, aggregator or industry association withdraw their accreditation of membership for reasons other than volume?</inlineHelpText>
    <label>Accreditation Previously Withdrawn?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>