force-app/main/default/objects/Lead/fields/ACL__c.field-meta.xml
<CustomField>
    <fullName>ACL__c</fullName>
    <label>ACL</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>