force-app/main/default/objects/Lead/fields/ACL_ACR_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>ACL_ACR_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACL &amp; ACR Confirmation</label>
    <type>Checkbox</type>
</CustomField>