force-app/main/default/objects/Lead/fields/ACR__c.field-meta.xml
<CustomField>
    <fullName>ACR__c</fullName>
    <label>ACR</label>
    <length>10</length>
    <type>Text</type>
</CustomField>