force-app/main/default/objects/Lead/fields/AFCA_Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>AFCA_Membership_Number__c</fullName>
    <label>AFCA Membership Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>