force-app/main/default/objects/Lead/fields/Aggregator__c.field-meta.xml
<CustomField>
    <fullName>Aggregator__c</fullName>
    <label>Aggregator</label>
    <length>20</length>
    <type>Text</type>
</CustomField>