force-app/main/default/objects/Lead/fields/Aggregator_Confirmation_of_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Aggregator_Confirmation_of_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aggregator Confirmation of Appointment</label>
    <type>Checkbox</type>
</CustomField>