force-app/main/default/objects/Lead/fields/Been_Bankrupt__c.field-meta.xml
<CustomField>
    <fullName>Been_Bankrupt__c</fullName>
    <inlineHelpText>Have they ever been declared bankrupt?</inlineHelpText>
    <label>Previously Bankrupt?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>