force-app/main/default/objects/Lead/fields/Broker_Accreditation_Form__c.field-meta.xml
<CustomField>
    <fullName>Broker_Accreditation_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Broker Accreditation Form</label>
    <type>Checkbox</type>
</CustomField>