force-app/main/default/objects/Lead/fields/Broker_Specialisation__c.field-meta.xml
<CustomField>
    <fullName>Broker_Specialisation__c</fullName>
    <label>Broker Specialisation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Broker_Specialisation</valueSetName>
    </valueSet>
</CustomField>