force-app/main/default/objects/Lead/fields/Broker_Training_Completed__c.field-meta.xml
<CustomField>
    <fullName>Broker_Training_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Broker Training Completed</label>
    <type>Checkbox</type>
</CustomField>