force-app/main/default/objects/Lead/fields/Certified_ID_of_Each_Director__c.field-meta.xml
<CustomField>
    <fullName>Certified_ID_of_Each_Director__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certified ID of Each Director</label>
    <type>Checkbox</type>
</CustomField>