force-app/main/default/objects/Lead/fields/Commercial_Only_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Only_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commercial Only Agreement</label>
    <type>Checkbox</type>
</CustomField>