force-app/main/default/objects/Lead/fields/Confirmation_of_ACL__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_of_ACL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmation of ACL</label>
    <type>Checkbox</type>
</CustomField>