force-app/main/default/objects/Lead/fields/Confirmation_of_AFCA_Membership__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_of_AFCA_Membership__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmation of AFCA Membership</label>
    <type>Checkbox</type>
</CustomField>