force-app/main/default/objects/Lead/fields/Confirmation_of_Industry_Body_Membership__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_of_Industry_Body_Membership__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmation of Industry Body Membership</label>
    <type>Checkbox</type>
</CustomField>