force-app/main/default/objects/Lead/fields/Confirmation_of_PI_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_of_PI_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmation of PI Insurance</label>
    <type>Checkbox</type>
</CustomField>