force-app/main/default/objects/Lead/fields/Declarations_Comments__c.field-meta.xml
<CustomField>
    <fullName>Declarations_Comments__c</fullName>
    <description>If any of the declarations are yes then the BDM needs to discuss with the Broker or Aggregator</description>
    <label>Declarations Comments</label>
    <type>TextArea</type>
</CustomField>