force-app/main/default/objects/Lead/fields/Discussed_Declarations_with_Broker__c.field-meta.xml
<CustomField>
    <fullName>Discussed_Declarations_with_Broker__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If any of the declarations are yes then the BDM needs to discuss with the Broker or Aggregator</inlineHelpText>
    <label>Discussed Declarations with Aggregator</label>
    <type>Checkbox</type>
</CustomField>