force-app/main/default/objects/Lead/fields/Guilty_of_a_Crime__c.field-meta.xml
<CustomField>
    <fullName>Guilty_of_a_Crime__c</fullName>
    <inlineHelpText>Have they ever been found guilty of any offence or crime, involving fraud or dishonesty?</inlineHelpText>
    <label>Previously Guilty of a Crime?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>