force-app/main/default/objects/Lead/fields/Industry_Membership_Asso__c.field-meta.xml
<CustomField>
    <fullName>Industry_Membership_Asso__c</fullName>
    <description>Industry membership association name (MFAA/FBAA/CAFBA)</description>
    <label>Industry Membership Association</label>
    <length>5</length>
    <type>Text</type>
</CustomField>