force-app/main/default/objects/Lead/fields/Industry_Membership_Association__c.field-meta.xml
<CustomField>
    <fullName>Industry_Membership_Association__c</fullName>
    <label>Industry Membership Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>