force-app/main/default/objects/Lead/fields/Industry_Membership_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Industry_Membership_Expiry_Date__c</fullName>
    <description>23/03/2021 - RJohnston
https://wingategroup.atlassian.net/browse/OIBCR-237?atlOrigin=eyJpIjoiMDUwNTk4MTE2MzQ5NDg5MmFlZTk4NmE4Y2E2NzUzZjEiLCJwIjoiaiJ9
New field to allow conversions to happen</description>
    <label>Industry Membership Expiry Date</label>
    <type>Date</type>
</CustomField>