force-app/main/default/objects/Lead/fields/Opt_Out_of_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_of_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt Out of Marketing</label>
    <type>Checkbox</type>
</CustomField>