force-app/main/default/objects/Lead/fields/Other_Specialisation__c.field-meta.xml
<CustomField>
    <fullName>Other_Specialisation__c</fullName>
    <label>Other Specialisation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>