force-app/main/default/objects/Lead/fields/Preferred_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Name__c</fullName>
    <description>RJohnston - 11/5/21 - to allow the team to put in preferred name before being converted 
https://wingategroup.atlassian.net/secure/RapidBoard.jspa?rapidView=10&amp;projectKey=OIBCR&amp;modal=detail&amp;selectedIssue=OIBCR-350</description>
    <label>Preferred Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>