force-app/main/default/objects/Lead/fields/Qualified_Decalaration__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Decalaration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qualified Decalaration</label>
    <type>Checkbox</type>
</CustomField>