force-app/main/default/objects/Lead/fields/Signed_Application_Form__c.field-meta.xml
<CustomField>
    <fullName>Signed_Application_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed Application Form</label>
    <type>Checkbox</type>
</CustomField>