force-app/main/default/objects/Lead/fields/Signed_Origination_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Signed_Origination_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed Origination Agreement</label>
    <type>Checkbox</type>
</CustomField>