force-app/main/default/objects/Lead/recordTypes/Aggregator_Direct_Accredited_Broker.recordType-meta.xml
<RecordType>
    <fullName>Aggregator_Direct_Accredited_Broker</fullName>
    <active>true</active>
    <businessProcess>Aggregator %26 Direct Accredited Broker</businessProcess>
    <description>Aggregators and Direct Accredited Brokers</description>
    <label>Aggregator/Direct Accredited Broker</label>
</RecordType>