force-app/main/default/objects/Lead/recordTypes/Broker_On_boarding.recordType-meta.xml
<RecordType>
    <fullName>Broker_On_boarding</fullName>
    <active>true</active>
    <businessProcess>Broker On Boarding %28Aggregator ACRs%29</businessProcess>
    <description>ACRs of Aggregators via on boarding process</description>
    <label>Broker On Boarding (Aggregator ACRs)</label>
</RecordType>