force-app/main/default/objects/Lead/recordTypes/Direct_Accredited_ACR.recordType-meta.xml
<RecordType>
    <fullName>Direct_Accredited_ACR</fullName>
    <active>true</active>
    <businessProcess>Broker</businessProcess>
    <description>Authorised Credit Representatives Under Direct Accredited ACLs</description>
    <label>Direct Accredited ACR</label>
</RecordType>