force-app/main/default/objects/Lead/recordTypes/Sub_Aggregator.recordType-meta.xml
<RecordType>
    <fullName>Sub_Aggregator</fullName>
    <active>true</active>
    <businessProcess>Sub Aggregator</businessProcess>
    <description>Sub Aggregators</description>
    <label>Sub Aggregator</label>
</RecordType>