force-app/main/default/objects/Lead/validationRules/Broker_On_Boarding_Aggregator_ACRs.validationRule-meta.xml
<ValidationRule>
    <fullName>Broker_On_Boarding_Aggregator_ACRs</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.Name = &quot;Broker On Boarding (Aggregator ACRs)&quot;,  ISPICKVAL( Status ,&quot;submitted for approval&quot;),  Broker_Training_Completed__c = False)</errorConditionFormula>
    <errorMessage>Training with Broker needs to be completed before in order to proceed.</errorMessage>
</ValidationRule>