force-app/main/default/objects/Lead/validationRules/Due_Diligence_Submit_Dbroker_Agg.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Diligence_Submit_Dbroker_Agg</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.Name = &quot;Aggregator/Direct Accredited Broker&quot; ,  ISPICKVAL( Status , &quot;submitted for approval&quot;), OR( Signed_Origination_Agreement__c = False,  Confirmation_of_ACL__c = False,  Confirmation_of_AFCA_Membership__c = False,  Certified_ID_of_Each_Director__c = False,  Signed_Application_Form__c = False,  Confirmation_of_Industry_Body_Membership__c = False,  Confirmation_of_PI_Insurance__c = False))</errorConditionFormula>
    <errorMessage>All Due Diligence items must be checked before submitting</errorMessage>
</ValidationRule>