force-app/main/default/objects/Lead/validationRules/Lead_Conversion.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Conversion</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Approved__c = FALSE,  IsConverted = True)</errorConditionFormula>
    <errorMessage>This Lead has not been approved yet</errorMessage>
</ValidationRule>