force-app/main/default/objects/Lead/validationRules/Must_Convert_to_Qualify.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Convert_to_Qualify</fullName>
    <active>true</active>
    <description>Lead must be converted to change to qualified</description>
    <errorConditionFormula>AND( IsConverted = False,  ISPICKVAL( Status , &quot;Qualified&quot;))</errorConditionFormula>
    <errorMessage>Can not be marked Qualified if not converted</errorMessage>
</ValidationRule>