force-app/main/default/objects/Lead/listViews/My_Open_Leads.listView-meta.xml
<ListView>
    <fullName>My_Open_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Open Leads</label>
</ListView>